manifests/prod/route-blue.yaml
---
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: nodejs-blue
      app.kubernetes.io/component: nodejs-blue
      app.kubernetes.io/instance: nodejs-blue
    name: nodejs-blue
  spec:
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    port:
      targetPort: 3000-tcp
    to:
      kind: Service
      name: nodejs-blue
      weight: 100
    wildcardPolicy: None
kind: List
