manifests/prod/route-green.yaml
---
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: nodejs-green
      app.kubernetes.io/component: nodejs-green
      app.kubernetes.io/instance: nodejs-green
    name: nodejs-green
  spec:
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    port:
      targetPort: 3000-tcp
    to:
      kind: Service
      name: nodejs-green
      weight: 100
    wildcardPolicy: None
kind: List
