manifests/prod/route.yaml
---
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: nodejs-bluegreen
      app.kubernetes.io/component: nodejs-bluegreen
      app.kubernetes.io/instance: nodejs-bluegreen
    name: nodejs-bluegreen
    annotations:
      description: Current live route for application's http service.
  spec:
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    to:
      name: nodejs-blue
kind: List
